# rules_maven_third_party

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  import_external.bzl  macros.bzl  managed_artifacts.bzl  test_macros.bzl  third_party.bzl
.github/workflows/: continuous-integration-workflo.yml  continuous-integration-workflow.yml
dependency-resolver/: pom.xml
dependency-resolver/maven-dependency-resolver/: BUILD.bazel  MANIFEST.MF  pom.xml
dependency-resolver/maven-dependency-resolver-api/: BUILD.bazel  MANIFEST.MF  pom.xml
dependency-resolver/maven-dependency-resolver-testkit/: BUILD.bazel  MANIFEST.MF  pom.xml
dependency-synchronizer/: pom.xml
dependency-synchronizer/bazel-deps-synchronizer/: pom.xml
dependency-synchronizer/bazel-deps-synchronizer-webapp/: BUILD.bazel  MANIFEST.MF  pom.xml
dependency-synchronizer/bazel-deps-synchronizer-webapp/src/main/resources/: bazel-deps-synchronizer-config.json.erb  log_pipelines.json.erb  logback-overrides.xml  server-infra-coordinates.json
dependency-synchronizer/bazel-fw-deps-synchronizer-cli/: BUILD.bazel  MANIFEST.MF  pom.xml
dependency-synchronizer/bazel-fw-deps-synchronizer-cli/scripts/: additional-deps.txt  build_cli.groovy  sync-fw-ga-to-single-repo.groovy  sync-fw-ga.groovy  sync-snapshot-module-to-single-repo.groovy  uber-sync-snapshot-module.groovy
dependency-synchronizer/bazel-fw-deps-synchronizer-cli/src/e2e/resources/: logback-test.xml
dependency-synchronizer/bazel-fw-deps-synchronizer-cli/src/main/resources/: logback.xml
example/: BUILD.bazel  WORKSPACE  artifacts.bzl  third_party.bzl
example/src/main/java/: BUILD  Example.java
example/src/test/java/: BUILD  ExampleTest.java
private/synchronizer/cli/src/main/resources/: logback.xml
rules/: BUILD.bazel  import_external_alias.bzl  managed_third_party.bzl  maven_specs.bzl  resolve_dependencies.bzl
tools/build_rules/: BUILD.bazel  prelude_bazel
tools/toolchains/cc/: repositories.bzl  toolchains.bzl
