load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_library", "scala_test")
load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")
load("@io_bazel_rules_scala//scala:providers.bzl", "declare_deps_provider")
load("@io_bazel_rules_scala//testing/toolchain:toolchain.bzl", "scala_testing_toolchain")

scala_toolchain(
    name = "warn_unused_deps_scala_toolchain",
    dep_providers = [
        ":scala_xml_provider",
        ":parser_combinators_provider",
        ":scala_compile_classpath_provider",
        ":scala_library_classpath_provider",
        ":scala_macro_classpath_provider",
    ],
    dependency_mode = "plus-one",
    dependency_tracking_method = "ast-plus",
    strict_deps_mode = "warn",
    unused_dependency_checker_mode = "warn",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "custom_scala_toolchain",
    toolchain = "warn_unused_deps_scala_toolchain",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
    visibility = ["//visibility:public"],
)

declare_deps_provider(
    name = "scala_xml_provider",
    deps_id = "scala_xml",
    visibility = ["//visibility:public"],
    deps = ["@org_scala_lang_modules_scala_xml_2_12"],
)

declare_deps_provider(
    name = "parser_combinators_provider",
    deps_id = "parser_combinators",
    visibility = ["//visibility:public"],
    deps = ["@org_scala_lang_modules_scala_parser_combinators_2_12"],
)

declare_deps_provider(
    name = "scala_compile_classpath_provider",
    deps_id = "scala_compile_classpath",
    visibility = ["//visibility:public"],
    deps = [
        "@org_scala_lang_scala_compiler",
        "@org_scala_lang_scala_library",
        "@org_scala_lang_scala_reflect",
    ],
)

declare_deps_provider(
    name = "scala_library_classpath_provider",
    deps_id = "scala_library_classpath",
    visibility = ["//visibility:public"],
    deps = [
        "@org_scala_lang_scala_library",
        "@org_scala_lang_scala_reflect",
    ],
)

declare_deps_provider(
    name = "scala_macro_classpath_provider",
    deps_id = "scala_macro_classpath",
    visibility = ["//visibility:public"],
    deps = [
        "@org_scala_lang_scala_library",
        "@org_scala_lang_scala_reflect",
    ],
)

scala_testing_toolchain(
    name = "testing_toolchains_with_all_deps_impl",
    dep_providers = [
        ":specs2_classpath_provider",
        ":specs2_junit_classpath_provider",
        ":junit_classpath_provider",
    ],
    visibility = ["//visibility:public"],
)

toolchain(
    name = "testing_toolchain",
    toolchain = ":testing_toolchains_with_all_deps_impl",
    toolchain_type = "@io_bazel_rules_scala//testing/toolchain:testing_toolchain_type",
    visibility = ["//visibility:public"],
)

declare_deps_provider(
    name = "junit_classpath_provider",
    deps_id = "junit_classpath",
    visibility = ["//visibility:public"],
    deps = [
        "@junit_junit",
        "@org_hamcrest_hamcrest_core",
    ],
)

declare_deps_provider(
    name = "specs2_classpath_provider",
    deps_id = "specs2_classpath",
    visibility = ["//visibility:public"],
    deps = [
        "@org_specs2_specs2_common_2_12",
        "@org_specs2_specs2_core_2_12",
        "@org_specs2_specs2_fp_2_12",
        "@org_specs2_specs2_matcher_2_12",
    ],
)

declare_deps_provider(
    name = "specs2_junit_classpath_provider",
    deps_id = "specs2_junit_classpath",
    visibility = ["//visibility:public"],
    deps = [
        "@io_bazel_rules_scala//scala:bazel_test_runner_deploy",
        "@org_specs2_specs2_junit_2_12",
    ],
)
