load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_library", "scala_test")
load("@io_bazel_rules_scala//scala:scala_toolchain.bzl", "scala_toolchain")
load("@io_bazel_rules_scala//scala:providers.bzl", "declare_deps_provider")

scala_toolchain(
    name = "warn_unused_deps_scala_toolchain",
    dep_providers = [
        ":scala_xml_provider",
        ":parser_combinators_provider",
        ":scala_compile_classpath_provider",
        ":scala_library_classpath_provider",
        ":scala_macro_classpath_provider",
    ],
    dependency_mode = "plus-one",
    dependency_tracking_method = "ast",
    strict_deps_mode = "warn",
    unused_dependency_checker_mode = "warn",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "custom_scala_toolchain",
    toolchain = "warn_unused_deps_scala_toolchain",
    toolchain_type = "@io_bazel_rules_scala//scala:toolchain_type",
    visibility = ["//visibility:public"],
)

declare_deps_provider(
    name = "scala_xml_provider",
    deps_id = "scala_xml",
    visibility = ["//visibility:public"],
    deps = ["@org_scala_lang_modules_scala_xml_2_12"],
)

declare_deps_provider(
    name = "parser_combinators_provider",
    deps_id = "parser_combinators",
    visibility = ["//visibility:public"],
    deps = ["@org_scala_lang_modules_scala_parser_combinators_2_12"],
)

declare_deps_provider(
    name = "scala_compile_classpath_provider",
    deps_id = "scala_compile_classpath",
    visibility = ["//visibility:public"],
    deps = [
        "@org_scala_lang_scala_compiler",
        "@org_scala_lang_scala_library",
        "@org_scala_lang_scala_reflect",
    ],
)

declare_deps_provider(
    name = "scala_library_classpath_provider",
    deps_id = "scala_library_classpath",
    visibility = ["//visibility:public"],
    deps = [
        "@org_scala_lang_scala_library",
        "@org_scala_lang_scala_reflect",
    ],
)

declare_deps_provider(
    name = "scala_macro_classpath_provider",
    deps_id = "scala_macro_classpath",
    visibility = ["//visibility:public"],
    deps = [
        "@org_scala_lang_scala_library",
        "@org_scala_lang_scala_reflect",
    ],
)
