package(default_visibility = ["//visibility:public"])

scala_library(
    name = "main_dependencies",
    runtime_deps = [
        "//dependency-synchronizer/bazel-fw-deps-synchronizer-cli/src/main/resources",
        "@ch_qos_logback_logback_classic",
    ],
    deps = [
        "//dependency-resolver/maven-dependency-resolver:main_dependencies",
        "//dependency-synchronizer/bazel-deps-synchronizer:main_dependencies",
        "//repo-analyzer/maven-repo-analyzer:main_dependencies",
        "//wix-bazel-repositories/bazel-repositories-core:main_dependencies",
        "@javax_servlet_javax_servlet_api",
        "@org_scala_lang_scala_library",
        "@org_slf4j_slf4j_api",
    ],
)

scala_library(
    name = "tests_dependencies",
    testonly = 1,
    runtime_deps = [
        "//dependency-synchronizer/bazel-fw-deps-synchronizer-cli/src/e2e/resources",
    ],
    deps = [
        "main_dependencies",
        "//dependency-resolver/maven-dependency-resolver-testkit:main_dependencies",
        "//dependency-synchronizer/bazel-deps-synchronizer:main_dependencies",
        "@org_specs2_specs2_common_2_12",
        "@org_specs2_specs2_core_2_12",
        "@org_specs2_specs2_junit_2_12",
        "@org_specs2_specs2_matcher_2_12",
    ],
)

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
